# podmgr

./: .gitignore  .goreleaser.yaml  Cargo.toml  Dockerfile.goreleaser  README.md  mkdocs.yml
.github/workflows/: ci.yml  docs.yml  release.yml  test-arm64.yml
crates/podbox/: Cargo.toml  build.rs
crates/podbox-guest/: build.rs
crates/podbox/src/: build.rs  cli.rs  config.rs  diff.rs  env.rs  error.rs  init_wizard.rs  lib.rs  main.rs  podman.rs  process.rs  quadlet_install.rs  socket_host.rs  xdg.rs
crates/podbox/src/codegen/: containerfile.rs  distros.rs  mod.rs  quadlet.rs
crates/podbox/src/commands/: clone.rs  config.rs  context.rs  create.rs  definition.rs  diff.rs  export.rs  inspect.rs  lifecycle.rs  mod.rs  pull.rs  runtime.rs  serve.rs  translate.rs
crates/podbox/src/config/: defaults.rs  enums.rs  fs.rs  mod.rs  types.rs  validation.rs
crates/podbox/src/profiles/: cachy.toml  dev.toml  fedora.toml  gaming.toml
crates/podbox/src/socket_host/: handlers.rs
crates/podbox/src/wizard/: prompts.rs
crates/podbox/tests/: codegen_tests.rs  dry_run.rs  prebuilt_tests.rs
crates/podbox/tests/fixtures/: prebuilt.toml
crates/podbox/tests/snapshots/: codegen_tests__dbus_proxy_service.snap  codegen_tests__quadlet_build.snap  codegen_tests__quadlet_socket.snap
docs/: architecture.md  config.md  export.md  getting-started.md  guest.md  index.md  protocol.md  troubleshooting.md
docs/stylesheets/: catppuccin.css
images/cachy/: Containerfile
images/dev/: Containerfile
scripts/: gen-cover-svg.sh  install-online.sh  install.sh  uninstall.sh
(+29 files in other folders)
