[package]
name    = "podbox"
version.workspace = true
edition = "2021"

[lib]
name = "podbox"
path = "src/lib.rs"

[[bin]]
name = "podbox"
path = "src/main.rs"

[dependencies]
clap           = { version = "4.5", features = ["derive"] }
clap_complete  = "4.5"
serde          = { workspace = true }
serde_json     = { workspace = true }
toml           = "0.8"
anyhow         = { workspace = true }
thiserror      = { workspace = true }
dirs           = "5.0"
which          = "6.0"
indexmap       = "2.0"
notify-rust    = "4.0"
nix            = { workspace = true }
dialoguer      = { version = "0.11", features = ["fuzzy-select"] }
sha2           = "0.10"
hex            = "0.4"
url            = "2.5"
toml_edit      = "0.22"
podbox-protocol = { path = "../podbox-protocol" }

[dev-dependencies]
assert_cmd = "2.0"
insta      = { version = "1.41", features = ["json"] }
predicates = "3.1"
tempfile   = "3.15"
